# txt2sql-agent

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
.opencode/skills/: langfuse
config/: schema_overrides.yaml
scripts/: click_schema.sql  seed_clickhouse.py
src/: db.py  graph.py  prompts.py  state.py
src/txt2sql_agent/: __main__.py  config.py  graph.py  nodes.py  prompts.py  schema_repository.py  sql_review.py  state.py  tools.py
tests/: conftest.py  test_fix_sql.py  test_review.py  test_should_continue.py  test_sql_review_node.py  test_validate_sql.py  test_verify_sql.py
