[project]
name = "txt2sql-agent"
version = "0.1.0"
description = "LangGraph agent that translates natural language to SQL with self-correction"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.4",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "clickhouse-connect>=0.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "faker>=30.0",
    "langfuse>=3.0",
    "sqlglot>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
txt2sql = "txt2sql_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"